<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.kyle.popularmovies.activities.MovieInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/portrait_height"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/poster_desc"
                android:src="@drawable/placeholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_title"
                android:textColor="@color/label_color"
                android:textSize="@dimen/label_size"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder"
                android:textColor="@color/attr"
                android:textSize="@dimen/attr_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_release"
                android:textColor="@color/label_color"
                android:textSize="@dimen/label_size"/>

            <TextView
                android:id="@+id/release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder"
                android:textColor="@color/attr"
                android:textSize="@dimen/attr_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_rating"
                android:textColor="@color/label_color"
                android:textSize="@dimen/label_size"/>

            <TextView
                android:id="@+id/vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder"
                android:textColor="@color/attr"
                android:textSize="@dimen/attr_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_plot"
                android:textColor="@color/label_color"
                android:textSize="@dimen/label_size"/>

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/attr"
                android:textSize="@dimen/attr_size"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
